--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "telegraf": "^4.1.2"
+    "telegraf": "^4.1.2",
+    "telegram-keyboard": "^2.2.6"
   }
 }
